--- a/Flipkart_CSA_EDA_Project.ipynb
+++ b/Flipkart_CSA_EDA_Project.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "vncDsAP0Gaoa",
         "FJNUwmbgGyua",
         "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
@@ -14,8 +15,6 @@
         "dauF4eBmngu3",
         "bKJF3rekwFvQ",
         "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
-        "_yllAckABNfS",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
@@ -47,10 +46,8 @@
         "1M8mcRywphqQ",
         "tgIPom80phqQ",
         "JMzcOPDDphqR",
-        "x-EpHcCOp1ci",
         "X_VqEhTip1ck",
         "8zGJKyg5p1ck",
-        "PVzmfK_Ep1ck",
         "BFxO2uQw4o-i",
         "n3dbpmDWp1ck",
         "M7G43BXep1ck",
@@ -82,7 +79,9 @@
         "NC_X3p0fY2L0",
         "UV0SzAkaZNRQ",
         "YPEH6qLeZNRQ",
-        "q29F0dvdveiT"
+        "q29F0dvdveiT",
+        "JcMwzZxoAimU",
+        "gCX9965dhzqZ"
       ],
       "include_colab_link": true
     },
@@ -156,7 +155,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[Flipkart CSA EDA Project](https://)"
+        "[Flipkart CSA EDA Project](https://github.com/pmehta2612/Flipkart_CSA_EDA-Project/blob/main/Flipkart_CSA_EDA_Project.ipynb)"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -3615,7 +3614,7 @@
         "id": "mAQTIvtqp1cj",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 570
         },
         "outputId": "c37fe2e7-b8f1-497b-a3f3-8c07f77c670f"
       },
@@ -3691,7 +3690,7 @@
         "* Boosting positive sentiment through proactive customer engagement or personalized services could enhance customer satisfaction and loyalty.\n",
         "* Monitoring sentiment trends over time can help detect areas where customer experience might be improving or deteriorating.\n",
         "\n",
-        "**Neutral/Negative Impact:**\n",
+        "**Negative Impact:**\n",
         "* The high volume of neutral sentiment may indicate that customers feel indifferent or uninspired, which could suggest a lack of emotional engagement.\n",
         "* The lack of strong positive sentiment could imply that the customer experience is not exceeding expectations.\n",
         "* The low negative sentiment is a positive sign, suggesting fewer extremely dissatisfied customers.\n",
